@@ -23,24 +23,28 @@ import net.bnubot.settings.GlobalSettings;
  * @author scotta
  */
 public class MirrorSelector {
-	private static final int MAX_TIME = 1000; // timeout time in ms
+	private static final int MAX_TIME = 400; // timeout time in ms
+	private static final int IDEAL_LIMIT = 50;
+	private static final int MAX_TIME_TOTAL = 3000;
 
 	private static InetAddress selectMirror(InetAddress[] mirrors, int port) {
 		Socket s = new Socket();
 		long bestTime = MAX_TIME;
 		InetAddress bestHost = null;
-		long start;
+		long start = System.currentTimeMillis();
 
 		for (InetAddress mirror : mirrors) {
-			long time;
 			try {
 				s = new Socket();
-				start = System.currentTimeMillis();
+				long lap = System.currentTimeMillis();
 				s.connect(new InetSocketAddress(mirror, port), MAX_TIME);
-				time = System.currentTimeMillis() - start;
+				long time = System.currentTimeMillis() - lap;
 				s.close();
 				if(Out.isDebug(MirrorSelector.class))
 					Out.debugAlways(MirrorSelector.class, "Connecting to " + mirror.getHostAddress() + " took " + time + "ms");
+
+				if(time <= IDEAL_LIMIT)
+					return mirror;
 
 				if (time < bestTime) {
 					bestTime = time;
@@ -56,24 +60,34 @@ public class MirrorSelector {
 				Out.error(MirrorSelector.class, "Error connecting to " + mirror);
 				Out.exception(ioe);
 			}
+
+			long elapsed = System.currentTimeMillis() - start;
+			if(elapsed > MAX_TIME_TOTAL) {
+				Out.info(MirrorSelector.class, "Mirror selection is taking too long; skipping.");
+				break;
+			}
 		}
 
 		if(bestHost == null) {
-			bestHost = mirrors[(int)(Math.random() * mirrors.length)];
+			bestHost = random(mirrors);
 			Out.info(MirrorSelector.class, "There was no clear winner; randomly choosing " + bestHost.getHostAddress());
 		}
 		return bestHost;
+	}
+
+	private static InetAddress random(InetAddress[] hosts) {
+		return hosts[(int)(Math.random() * hosts.length)];
 	}
 
 	public static InetAddress getClosestMirror(String hostname, int port)
 			throws UnknownHostException {
 		InetAddress hosts[] = InetAddress.getAllByName(hostname);
 
-		if(!GlobalSettings.enableMirrorSelector)
-			return hosts[(int)(Math.random() * hosts.length)];
-
 		if (hosts.length == 1)
 			return hosts[0];
+
+		if(!GlobalSettings.enableMirrorSelector)
+			return random(hosts);
 
 		Out.info(MirrorSelector.class, "Searching for fastest of " + hosts.length + " hosts for " + hostname);
 		return selectMirror(hosts, port);
